[package]
name = "typeme"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
openapiv3 = "=2.0.0"
napi-derive = "2.16.13"
napi = "2.16.16"

[build-dependencies]
napi-build = "2"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
strip = "symbols"
